# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml  run.py  sonar-project.properties
.github/workflows/: my-chek.yml  sonar.yml
page_analyzer/: __init__.py  app.py  database.py  parser.py  url_normalyzer.py
page_analyzer/templates/: base.html  checks.html  home.html  new_url.html  urls.html
templates/: home.html  home1.html
