[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.11",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "ruff>=0.14.5",
]
